--- a/README.textile
+++ b/README.textile
@@ -43,6 +43,12 @@ post.title_en = "Globalize3 Super"
 post.title_he = "Globalize3 שולט"
 </code></pre>
 
+Configuration available locales list (by default it returns I18n.available_locales):
+
+<pre><code>
+  Globalize.available_locales = [:en, :ru]
+<pre><code>
+
 In order to make this work, you'll need to add the appropriate translation tables. Globalize3 comes with a handy helper method to help you do this. It's called @create_translation_table!@. Here's an example:
 
 <pre><code>
