Auto migration translated columns

--- a/README.textile
+++ b/README.textile
@@ -6,7 +6,7 @@ Globalize3 is much more lightweight and compatible than its predecessor Globaliz
 
 h2. Requirements
 
-ActiveRecord > 3.0.0
+ActiveRecord > 3.0.0.rc
 I18n
 
 h2. Installation
@@ -14,11 +14,20 @@ h2. Installation
 To install Globalize3 with its default setup just use:
 
 <pre><code>
-$ gem 'globalize3', :git => 'git://github.com/galetahub/globalize3.git'
+$ gem install globalize3
 </code></pre>
 
 h2. Model translations
 
+h3. New schema
+
+<pre><code>
+class Post < ActiveRecord::Base
+  translates "title:string", "content:text"
+end
+</code></pre>
+
+h3. Old schema
 Model translations allow you to translate your models' attribute values. E.g.
 
 <pre><code>
@@ -35,21 +44,25 @@ post.title # => Globalize3 rocks!
 
 I18n.locale = :he
 post.title # => גלובאלייז2 שולט!
-
-post.title_en # => Globalize3 rocks!
-post.title_he # => גלובאלייז2 שולט!
-
-post.title_en = "Globalize3 Super"
-post.title_he = "Globalize3 שולט"
 </code></pre>
 
-Configuration available locales list (by default it returns I18n.available_locales):
+In order to make this work, you'll need to add the appropriate translation tables. Globalize3 comes with a handy helper method to help you do this. It's called @create_translation_table!@. Here's an example:
+
+h3. New schema
+
+Synchronize translated columns with database (create/drop table or add/change/remove column)
 
 <pre><code>
-  Globalize.available_locales = [:en, :ru]
-</pre></code>
+  rake db:globalize:up
+</code></pre>
 
-In order to make this work, you'll need to add the appropriate translation tables. Globalize3 comes with a handy helper method to help you do this. It's called @create_translation_table!@. Here's an example:
+Drop all globalize translations tables (but be careful: non-refundable with backup)
+
+<pre><code>
+  rake db:globalize:down
+</code></pre>
+
+h3. Old schema
 
 <pre><code>
 class CreatePosts < ActiveRecord::Migration
